src/objects/Singpost_Address__c.object
<CustomObject>
    <fields>
        <fullName>Address_Type_Overridden__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Address Type Overridden</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Address_Type__c</fullName>
        <label>Address Type</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Building_Name__c</fullName>
        <description>User Specified</description>
        <label>Building Name</label>
        <length>45</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Building_Type_Description__c</fullName>
        <label>Building Type Description</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Building__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Building Name Overridden</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Floor__c</fullName>
        <label>Floor</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>House_Block_Number__c</fullName>
        <label>House/Block Number</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>House_Type_Description__c</fullName>
        <formula>CASE( Address_Type__c , &quot;H&quot;, &quot;HDB Block&quot;, &quot;K&quot;, &quot;Block&quot;,&quot;A&quot;,&quot;Apartment&quot;,&quot;C&quot;,&quot;Condominium&quot;, &quot;S&quot;, &quot;Standard&quot;, &quot;G&quot;, &quot;Godown&quot;, &quot;P&quot;, &quot;PO Box, VBox or My Singpost Box&quot;, &quot;B&quot;, &quot;Locked Bag&quot;, &quot;W&quot;, &quot;Window Delivery&quot;, &quot;Walkup&quot;)</formula>
        <label>House Type Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Created_By__c</fullName>
        <label>Legacy Created By</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Created_Date__c</fullName>
        <label>Legacy Created Date</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Updated_By__c</fullName>
        <label>Legacy Updated By</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Updated_Date__c</fullName>
        <label>Legacy Updated Date</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Units__c</fullName>
        <label>Number of Units</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Old_Address_Type__c</fullName>
        <label>Old Address Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postal_Sector_Zone__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Postal Sector Zone</label>
        <referenceTo>Postal_Zone__c</referenceTo>
        <relationshipLabel>Singpost Addresses</relationshipLabel>
        <relationshipName>Singpost_Addresses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Postal_Sector__c</fullName>
        <formula>LEFT( Name,2 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Postal Sector</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Number__c</fullName>
        <label>Service Number</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SingPost_Building_Code__c</fullName>
        <label>SingPost Building Code</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SingPost_Key__c</fullName>
        <externalId>true</externalId>
        <label>SingPost Address</label>
        <length>16</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Street_Code__c</fullName>
        <label>Street Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Name_Overriden__c</fullName>
        <defaultValue>false</defaultValue>
        <description>User Specified</description>
        <label>Street Name Overriden</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Street_Name__c</fullName>
        <label>Street Name</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit__c</fullName>
        <label>Unit</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Walkup_Indicator__c</fullName>
        <label>Walkup Indicator</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <label>Singpost Address</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Address_Type__c</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>My_View</fullName>
        <columns>NAME</columns>
        <columns>Address_Type__c</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>11</value>
        </filters>
        <label>My View</label>
    </listViews>
    <nameField>
        <label>Postal Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Singpost Addresses</pluralLabel>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Restrict_edit_postal_code_after_creation</fullName>
        <active>false</active>
        <description>[JDomingo 8/20/14] Created validation rule to restrict edit on postal code field after creation.</description>
        <errorConditionFormula>IF($Profile.Name &lt;&gt; &apos;System Administrator&apos; &amp;&amp; ISCHANGED(Name), TRUE, FALSE)</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>You are not allowed to edit &apos;Postal Code&apos; field after creation.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Unique_record_entry_per_Postal_Code</fullName>
        <active>false</active>
        <description>System will allow only 1 Record per Postal Code</description>
        <errorConditionFormula>AND( 
OR(ISNEW(),ISCHANGED(Name)),
VLOOKUP( $ObjectType.Singpost_Address__c.Fields.Name ,  $ObjectType.Singpost_Address__c.Fields.Name ,  Name)  =  Name)</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>Only 1 Record per Postal Code is allowed</errorMessage>
    </validationRules>
</CustomObject>